--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="e">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="/css/Styles.css" />
-
+    <link rel="icon" href="/images/iconos/favicon-32x32.png" type=" image/png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -22,84 +22,83 @@
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8Y8DZCP333"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-8Y8DZCP333');
+</script>
+
 <header class="header-home">
     <div class="bg-5">
-        <p>Hola, mi nombre es</p>
-        <h1 class="animated-shadow">Bastian Soto</h1>
+        <p id="saludo">Hola, mi nombre es</p>
+        <h1 class="animated-name">Bastian Soto</h1>
     </div>
-
 </header>
 
 <body>
-
-
     <nav class="navegation-home">
         <ul class="list-group list-group-horizontal" id="info">
-            <li class="list-group-item active" id="item-active">
-                <i class="fa-solid fa-house fa-beat-fade"></i>
-                <a href="../index.html" class="button type1">Home</a>
-            </li>
-            <li class="list-group-item">
+            <li class="list-group-item" id="item-inactive">
                 <i class="fa-solid fa-briefcase "></i>
-                <a href="/templates/experiencia copy.html" class="card-link">Experiencia laboral</a>
+                <a href="templates/experiencia2.html" class="card-link">Experiencia laboral</a>
             </li>
-            <li class="list-group-item">
+            <li class="list-group-item" id="item-inactive">
                 <i class="fa-solid fa-user-graduate "></i>
                 <a href="/templates/educacion.html" class="card-link">Educacion</a>
             </li>
-            <li class="list-group-item">
+            <li class="list-group-item" id="item-inactive">
                 <i class="fa-solid fa-shapes "></i>
                 <a href="/templates/habilidades.html" class="card-link">Habilidades</a>
             </li>
-            <li class="list-group-item">
+            <li class="list-group-item" id="item-inactive">
                 <i class="fa-solid fa-diagram-project"></i>
                 <a href="/templates/proyectos.html" class="card-link">Proyectos</a>
             </li>
-            <li class="list-group-item">
+            <li class="list-group-item" id="item-inactive">
                 <i class="fa-solid fa-address-book"></i>
 
                 <a href="/templates/contacto.html" class="card-link">Contacto</a>
             </li>
-
         </ul>
-
     </nav>
     <div class="card" id="presentacion">
         <div class="card-body">
             <h4 class="card-title">Presentacion</h4>
-            <p class="card-text">Bienvenido, este sitio web es más que un simple portafolio . es un espacio para
-                Conozca más sobre la persona detrás de todo el trabajo. Disfrute de su
+            <p class="card-text">Bienvenido, este sitio web es más que un simple portafolio. Es un espacio para que
+                conozca más sobre la persona detrás de todo el trabajo. Disfrute de su
                 viaje de exploración y conocerme mejor.</p>
 
-            <div class="footer">
+            <div class="pies">
                 <ul class="list-group list-group-horizontal" id="pres-rs">
                     <li>
                         <a class="dropdown-item" href="https://www.facebook.com/bastian.sotopizarro/"
                             style="padding-left: 5px;">
-                            <i class="fa-brands fa-facebook fa-spin"></i>
+                            <i class="fa-brands fa-facebook fa"></i>
                         </a>
                     </li>
                     <li>
                         <a class=" dropdown-item" href="https://www.instagram.com/t.a.a.n.n/"
                             style="padding-left: 5px;">
-                            <i class="fa-brands fa-instagram fa-spin"></i>
+                            <i class="fa-brands fa-instagram fa"></i>
                         </a>
                     </li>
                     <li>
                         <a class=" dropdown-item" href="www.linkedin.com/in/bastian-soto-pizarro"
                             style="padding-left: 5px;">
-                            <i class="fa-brands fa-linkedin fa-spin"></i>
+                            <i class="fa-brands fa-linkedin fa"></i>
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
-
     </div>
     <footer>
         <p>&copy; 2023 Mi Currículum. Todos los derechos reservados.</p>
     </footer>
-
 </body>
 
 </html>
